# ltb-wgpu

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake  ThirdParty.cmake
src/ltb/: ltb_config.hpp.in
src/ltb/apps/: CMakeLists.txt
src/ltb/apps/hello/: main.cpp
src/ltb/utils/: container_utils.hpp  enum_flags.hpp  file_utils.hpp  generic_guard.hpp  json_settings.hpp  json_utils.hpp  logging.cpp  result.hpp  string.cpp  type_string.cpp  types.hpp
src/ltb/wgpu/: app.cpp  app.hpp  enum_strings.cpp  enum_strings.hpp
src/ltb/window/: glfw_os_window.cpp  glfw_os_window.hpp  glfw_utils.cpp  glfw_utils.hpp  os_window.hpp  update_loop.hpp  window_settings.hpp
